--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,7 +22,7 @@
             <h3>Kusu island</h3>
             <ul>
                 <li>Sea Water Quality</li>
-                <li><a routerLink="/something">Product Water Quality</a></li>
+                <li><a routerLink="/pwq">Product Water Quality</a></li>
                 <li>System Power Consumption</li>
                 <li>Brine Discharge Quality</li>
                 <li>Single Line Diagram</li>
@@ -43,39 +43,6 @@
     <mat-sidenav-content>
 
         <router-outlet></router-outlet>
-
-        <mat-grid-list cols="4" rowHeight="200px" gutterSize="50px">
-            <mat-grid-tile>
-                <img src="assets/Conductivity.png" width="100%" height="200px">
-            </mat-grid-tile>
-            <mat-grid-tile>
-                <img src="assets/Salinity.png" width="100%" height="200px">
-            </mat-grid-tile>
-            <mat-grid-tile>
-                <img src="assets/Turrbidity.png" width="100%" height="200px">
-            </mat-grid-tile>
-            <mat-grid-tile>
-                <img src="assets/PH.png" width="100%" height="200px">
-            </mat-grid-tile>
-        </mat-grid-list>
-
-        <mat-grid-list cols="3" rowHeight="300px" gutterSize="50px">
-            <mat-grid-tile>
-                <img src="assets/Map.png" width="100%" height="300px">
-            </mat-grid-tile>
-            <mat-grid-tile style="background-color: white; color: black; font-size: 25px;">
-                <p>Chart</p>
-            </mat-grid-tile>
-            <mat-grid-tile style="background-color: white; color: black; font-size: 25px;">
-                <p>Weather Chart</p>
-            </mat-grid-tile>
-        </mat-grid-list>
-
-        <mat-grid-list cols="1" rowHeight="400px" gutterSize="50px">
-            <mat-grid-tile style="background-color: white; color: black; font-size: 25px;">
-                <p>Tide Chart</p>
-            </mat-grid-tile>
-        </mat-grid-list>
 
     </mat-sidenav-content>
 </mat-sidenav-container>
