Add page-not-found component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,11 +21,11 @@
 
             <h3>Kusu island</h3>
             <ul>
-                <li>Sea Water Quality</li>
+                <li><a routerLink="/swq">Sea Water Quality</a></li>
                 <li><a routerLink="/pwq">Product Water Quality</a></li>
-                <li>System Power Consumption</li>
-                <li>Brine Discharge Quality</li>
-                <li>Single Line Diagram</li>
+                <li><a routerLink="/spc">System Power Consumption</a></li>
+                <li><a routerLink="/bdq">Brine Discharge Quality</a></li>
+                <li><a routerLink="sld">Single Line Diagram</a></li>
             </ul>
 
         </mat-expansion-panel>
