--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,11 +21,11 @@
 
             <h3>Kusu island</h3>
             <ul>
-                <li><a routerLink="/swq">Sea Water Quality</a></li>
-                <li><a routerLink="/pwq">Product Water Quality</a></li>
-                <li><a routerLink="/spc">System Power Consumption</a></li>
-                <li><a routerLink="/bdq">Brine Discharge Quality</a></li>
-                <li><a routerLink="sld">Single Line Diagram</a></li>
+                <li><a routerLink="/swq" routerLinkActive="selectedLink">Sea Water Quality</a></li>
+                <li><a routerLink="/pwq" routerLinkActive="selectedLink">Product Water Quality</a></li>
+                <li><a routerLink="/spc" routerLinkActive="selectedLink">System Power Consumption</a></li>
+                <li><a routerLink="/bdq" routerLinkActive="selectedLink">Brine Discharge Quality</a></li>
+                <li><a routerLink="sld" routerLinkActive="selectedLink">Single Line Diagram</a></li>
             </ul>
 
         </mat-expansion-panel>
