--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,9 +12,12 @@
 <mat-sidenav-container>
     <mat-sidenav #menubar mode="side">
         
-        <mat-expansion-panel hideToggle>
+        <mat-expansion-panel hideToggle 
+            (opened)="opened2D = true"
+            (closed)="opened2D = false">
+
             <mat-expansion-panel-header>
-                <mat-panel-title>
+                <mat-panel-title [ngClass]="{highlight: opened2D}">
                     2D DASHBOARD
                 </mat-panel-title>
             </mat-expansion-panel-header>
@@ -30,12 +33,16 @@
 
         </mat-expansion-panel>
 
-        <mat-expansion-panel hideToggle>
+        <mat-expansion-panel hideToggle
+            (opened)="opened3D = true"
+            (closed)="opened3D = false">
+
             <mat-expansion-panel-header>
-                <mat-panel-title>
+                <mat-panel-title [ngClass]="{highlight: opened3D}">
                     3D DASHBOARD
                 </mat-panel-title>
             </mat-expansion-panel-header>
+
         </mat-expansion-panel>
 
     </mat-sidenav>
