--- a/src/app/product-water-quality/product-water-quality.component.html
+++ b/src/app/product-water-quality/product-water-quality.component.html
@@ -1,32 +1,37 @@
-<mat-grid-list cols="4" rowHeight="200px" gutterSize="50px">
-    <mat-grid-tile>
-        <img src="assets/Conductivity.png" width="100%" height="200px">
+<mat-grid-list cols="12" gutterSize="25px">
+    
+    <!-- First Row -->
+    <mat-grid-tile colspan="3" rowspan="2">
+        <img src="assets/Conductivity.png" width="100%" height="100%">
     </mat-grid-tile>
-    <mat-grid-tile>
-        <img src="assets/Salinity.png" width="100%" height="200px">
+    <mat-grid-tile colspan="3" rowspan="2">
+        <img src="assets/Salinity.png" width="100%" height="100%">
     </mat-grid-tile>
-    <mat-grid-tile>
-        <img src="assets/Turrbidity.png" width="100%" height="200px">
+    <mat-grid-tile colspan="3" rowspan="2">
+        <img src="assets/Turrbidity.png" width="100%" height="100%">
     </mat-grid-tile>
-    <mat-grid-tile>
-        <img src="assets/PH.png" width="100%" height="200px">
+    <mat-grid-tile colspan="3" rowspan="2">
+        <img src="assets/PH.png" width="100%" height="100%">
     </mat-grid-tile>
-</mat-grid-list>
 
-<mat-grid-list cols="3" rowHeight="300px" gutterSize="50px">
-    <mat-grid-tile>
-        <img src="assets/Map.png" width="100%" height="300px">
+    <!-- Second Row -->
+    <mat-grid-tile colspan="4" rowspan="2">
+        <img src="assets/Map.png" width="100%" height="100%">
     </mat-grid-tile>
-    <mat-grid-tile style="background-color: white; color: black; font-size: 25px;">
+    <mat-grid-tile colspan="4" rowspan="2" style="background-color: white; color: black; font-size: 25px;">
         <p>Chart</p>
     </mat-grid-tile>
-    <mat-grid-tile style="background-color: white; color: black; font-size: 25px;">
+    <mat-grid-tile colspan="4" rowspan="2" style="background-color: white; color: black; font-size: 25px;">
         <p>Weather Chart</p>
     </mat-grid-tile>
+
+    <!-- third Row -->
+    <mat-grid-tile colspan="12" rowspan="2" style="background-color: white; color: black; font-size: 25px;">
+        <p>Tide Chart</p>
+    </mat-grid-tile>
+    
 </mat-grid-list>
 
 <mat-grid-list cols="1" rowHeight="400px" gutterSize="50px">
-    <mat-grid-tile style="background-color: white; color: black; font-size: 25px;">
-        <p>Tide Chart</p>
-    </mat-grid-tile>
+    
 </mat-grid-list>
