changed images to html except logo and added google maps for map

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,7 +23,7 @@
                 </mat-panel-title>
             </mat-expansion-panel-header>
 
-            <h3>Kusu island</h3>
+            <h3>Marina Beach</h3>
             <ul>
                 <li><a routerLink="/swq" routerLinkActive="selectedLink">Sea Water Quality</a></li>
                 <li><a routerLink="/pwq" routerLinkActive="selectedLink">Product Water Quality</a></li>
